# sem3_lab4

./: CMakeLists.txt  lib.cpp  lib.h  main.cpp  release.yml
.github/workflows/: release.yml
